--- a/index.html
+++ b/index.html
@@ -258,29 +258,36 @@ body {font-family: Arial;}
    }
 }
   let AdultList = ["Nasal", "Frontal", "Maxilla", "Parietal", "Supratemporal", "Quadrate", "Compound Bone", "Pterygoid", "Otoccipital"];
-  let  AdultListText = ["Nasal first", "Frontal Second"];
+  let  AdultListText = ["The nasal is now completely ossified.", "The frontal now exhibits complete contact with the parietal. The frontals are completely sutured.", "The premaxilla exhibits stronger integration with the rest of the snout.", "Prominent muscle attachment crests present.", "The posterior terminus is now posterior to occiput.", "The quadrate continues to elongate. The quadrate is now posterior to occiput. The ventral terminus rotates strongly posteriorly.", "There is stronger elongation and posterodorsal deflection. The mandibular condyle is clearly posterior to occiput (now visible).", "The tooth row and quadrate process undergo major posterior elongation.", "The jugular formen is large, subdivided, with well-defined jugular recess. The tuberalis fused to the crista interfenestralis."];
  function myFunctionAdul(variable) {
    if (variable == 1){
      
    document.getElementById('onclickadult').innerHTML = AdultList[0];
    document.getElementById('onclickadulttext').innerHTML = AdultListText[0];
-     
    } else if(variable == 2){
    document.getElementById('onclickadult').innerHTML = AdultList[1];
+     document.getElementById('onclickadulttext').innerHTML = AdultListText[1];
    }else if(variable == 3){
    document.getElementById('onclickadult').innerHTML = AdultList[2];
+     document.getElementById('onclickadulttext').innerHTML = AdultListText[2];
    }else if(variable == 4){
    document.getElementById('onclickadult').innerHTML = AdultList[3];
+     document.getElementById('onclickadulttext').innerHTML = AdultListText[3];
    }else if(variable == 5){
    document.getElementById('onclickadult').innerHTML = AdultList[4];
+     document.getElementById('onclickadulttext').innerHTML = AdultListText[4];
    }else if(variable == 6){
    document.getElementById('onclickadult').innerHTML = AdultList[5];
+     document.getElementById('onclickadulttext').innerHTML = AdultListText[5];
    }else if(variable == 7){
    document.getElementById('onclickadult').innerHTML = AdultList[6];
+     document.getElementById('onclickadulttext').innerHTML = AdultListText[6];
    }else if(variable == 8){
    document.getElementById('onclickadult').innerHTML = AdultList[7];
+     document.getElementById('onclickadulttext').innerHTML = AdultListText[7];
    }else if(variable == 9){
    document.getElementById('onclickadult').innerHTML = AdultList[8];
+     document.getElementById('onclickadulttext').innerHTML = AdultListText[8];
    }
 }
  
