--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ body {font-family: Arial;}
 <div id="Embryo" class="tabcontent">
   <h3>Embryonic Stage</h3>
   
-  <p>Skull length: 9.7mm</p>
+  <p>Skull Length: 9.7mm</p>
   
   <img src="/images/Embryo.png" alt="Workplace" usemap="#embryomap" width="302" height="149">
   
@@ -98,7 +98,7 @@ body {font-family: Arial;}
 
 <div id="Juvenile" class="tabcontent">
   <h3>Juvenile Stage</h3>
-  <p>Skull Lenghth: 11.6 mm </p> 
+  <p>Skull Length: 11.6 mm </p> 
   
 
 
@@ -143,7 +143,7 @@ body {font-family: Arial;}
 </div>
 <div id="Adult" class="tabcontent">
   <h3>Adult Stage</h3>
-  <p>Skull Lenght: 17.1 mm</p>
+  <p>Skull Length: 17.1 mm</p>
   
 
 
