--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ body {font-family: Arial;}
 </div>
 <div class="emb">
     <span class="rightfloat">
-        <p style="font-size:16px"><b><span id="onclickembryotext"></b></p></span>
+        <p style="font-size:16px"><span id="onclickembryotext"></p></span>
         </span>
     </span>
 </div>
