--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ body {font-family: Arial;}
  
  <div class="juv">
     <span class="rightfloat">
-      <p style="font-size:16px"><b><span id="onclickjuveniletext"></b></p></span>
+      <p style="font-size:16px"><span id="onclickjuveniletext"></p></span>
         </span>
     </span>
 </div>
@@ -182,7 +182,7 @@ body {font-family: Arial;}
 
  <div class="adul">
     <span class="rightfloat">
-        <p style="font-size:16px"><b><span id="onclickadulttext"></b></p></span>
+        <p style="font-size:16px"><span id="onclickadulttext"></p></span>
         </span>
     </span>
 </div>
