--- a/index.html
+++ b/index.html
@@ -311,7 +311,10 @@ function openCity(evt, cityName) {
 document.getElementById("defaultOpen").click();
 </script>
 
-<p style="font-size:35px">Lage-Gaped Feeding in Natricinae Snakes</p>
+
+
+
+<p><b> style="font-size:20px">References:</b></p>
    
 </body>
 </html> 
