--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@ document.getElementById("defaultOpen").click();
 
 
 
-<p><b> style="font-size:20px">References:</b></p>
+<p style="font-size:20px"><b>>References:</b></p>
    
 </body>
 </html> 
