--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ body {font-family: Arial;}
 <body>
 
   
-<p style="font-size:35px">Lage-Gaped Feeding in Natricinae Snakes</p>
+  <p style="font-size:35px"><b>Lage-Gaped Feeding in Natricinae Snakes</b><p>
   <p style="font-size:20px">blah blah blah</p>
 
 <div class="tab">
