--- a/index.html
+++ b/index.html
@@ -315,6 +315,7 @@ document.getElementById("defaultOpen").click();
 
 
 <p style="font-size:20px"><b>References:</b></p>
+<p style="font-size:15px">References:</p>
    
 </body>
 </html> 
