--- a/index.html
+++ b/index.html
@@ -314,8 +314,8 @@ document.getElementById("defaultOpen").click();
 
 
 
-<p style="font-size:20px"><b>References:</b></p>
-<p style="font-size:15px">Strong, C., Simoes, T., Caldwell, M, and Doschak, M. (2019). Cranial ontogeny of Thamnophis radix (Serpentes: Colubroidea) with a re-evaluation of current paradigms of snake skull evolution. Royal Society of Open Science, 6, 1-18.</p>
+<p style="font-size:25px"><b>Reference:</b></p>
+<p style="font-size:18px">Strong, C., Simoes, T., Caldwell, M, and Doschak, M. (2019). Cranial ontogeny of Thamnophis radix (Serpentes: Colubroidea) with a re-evaluation of current paradigms of snake skull evolution. Royal Society of Open Science, 6, 1-18.</p>
    
 </body>
 </html> 
