--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ body {font-family: Arial;}
 
   
   <p style="font-size:35px"><b>Lage-Gaped Feeding in Natricinae Snakes</b><p>
-  <p style="font-size:20px">blah blah blah</p>
+  <p style="font-size:20px">Natricinae snakes (subfamily to the Colubridae) macrostomatan, meaning they enable large-gaped feeding to consume prey (1). These snakes are able to consume prey larger than their own size due to their significantly large gapes, meaning the circumference of their oral cavity is very large. Natricinae snakes maximize their gape through various allometric changes in trophic morphology that results in relatively larger cranial elements compared to body size. Cranial changes throughout ontogeny are significantly contribute to the ability to exhibit macrostomy (2).  </p>
 
 <div class="tab">
   <button class="tablinks" onclick="openCity(event, 'Embryo')" id="defaultOpen">Embryo</button>
