--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ body {font-family: Arial;}
 
   
   <p style="font-size:35px"><b>Lage-Gaped Feeding in Natricinae Snakes</b><p>
-  <p style="font-size:20px">Natricinae snakes (subfamily to the Colubridae) macrostomatan, meaning they enable large-gaped feeding to consume prey. These snakes are able to consume prey larger than their own size due to their significantly large gapes, meaning the circumference of their oral cavity is very large. Natricinae snakes maximize their gape through various allometric changes in trophic morphology that results in relatively larger cranial elements compared to body size. Cranial changes throughout ontogeny are significantly contribute to the ability to exhibit macrostomy.  </p>
+  <p style="font-size:20px">Natricinae snakes (subfamily to the Colubridae) macrostomatan, meaning they enable large-gaped feeding to consume prey. These snakes are able to consume prey larger than their own size due to their significantly large gapes, meaning the circumference of their oral cavity is very large. Natricinae snakes maximize their gape through various allometric changes in trophic morphology that results in relatively larger cranial elements compared to body size. Cranial changes throughout ontogeny significantly contribute to the ability to exhibit macrostomy.  </p>
  <p style="font-size:20px"> The interactive diagram below depicts a dorsal view of a plains garter snake skull as an embryo, juvenile and adult to show important osteological changes that occur through cranial ontogeny (Obtained from Strong, et. al., 2019). Click through each tab to see a visual of the changes that occur. Click on the labelled cranial bones for individual descriptions of how the skull transforms across ontogeny. </p>
   
   
