--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ body {font-family: Arial;}
   
   <p style="font-size:35px"><b>Lage-Gaped Feeding in Natricinae Snakes</b><p>
   <p style="font-size:20px">Natricinae snakes (subfamily to the Colubridae) are macrostomatan, meaning they enable large-gaped feeding to consume prey (1). These snakes are able to consume prey larger than their own size due to their significantly large gapes, which is typically estimated from the circumference of the oral cavity. Natricinae snakes maximize their gape through various allometric changes in trophic morphology. Research has revealed that cranial bones exhibit negative allometry with increasing body length, suggesting that snakes have relatively larger heads compared to body size (1, 2). In other words, the head and body of these snakes grow at different rates, resulting in disproportionately large heads.  </p>
- <p style="font-size:20px">Macrostomy requires modifications in skeletal and soft tissue organs to permit snakes to consume prey with high cross-sectional areas whole (3).  The ability to ingest large prey is acquired progressively through the course of postnatal ontogeny as these modifications are made. Snakes must undergo various changes in cranial structures throughout development to maximize their gape at their various body sizes (4). Therefore, it is important to study these cranial changes in Natricinae through ontogeny to understand how they contribute to the ability to exhibit macrostomy. </p>
+ <p style="font-size:20px">Macrostomy requires modifications in skeletal and soft tissue organs to permit snakes to consume the whole body of prey with high cross-sectional areas(3).  The ability to ingest large prey is acquired progressively through the course of postnatal ontogeny as these modifications are made. Snakes must undergo various changes in cranial structures throughout development to maximize their gape at their various body sizes (4). Therefore, it is important to study these cranial changes in Natricinae through ontogeny to understand how they contribute to the ability to exhibit macrostomy. </p>
   <p style="font-size:20px"> The interactive diagram below depicts a dorsal view of a plains garter snake skull as an embryo, juvenile and adult to show important osteological changes that occur through cranial ontogeny (Obtained from Strong, et. al., 2019). Click through each tab to see a visual of the changes that occur. Click on the labelled cranial bones for individual descriptions of how the skull transforms across ontogeny. </p>
   
   
@@ -321,7 +321,10 @@ document.getElementById("defaultOpen").click();
 
 
 <p style="font-size:25px"><b>Reference:</b></p>
-<p style="font-size:18px">Strong, C., Simoes, T., Caldwell, M, and Doschak, M. (2019). Cranial ontogeny of Thamnophis radix (Serpentes: Colubroidea) with a re-evaluation of current paradigms of snake skull evolution. Royal Society of Open Science, 6, 1-18.</p>
+<p style="font-size:18px">1) Hampton, P. (2014). Allometry of skull morphology, gape size, and ingestion performance in the banded watersnake (Nerodia fasciata) feeding on two types of prey. </p>
+<p style="font-size:18px">2) Hampton, P., and Moon, B. (2012). Gape size, its morphological basis, and the validity of gape indices in western diamond-backed rattlesnakes (crotalus atrox). Journal of Morphology, 274, 194-202. </p>
+<p style="font-size:18px">3) Scanferla, A. (2016). Postnatal ontogeny and the evolution of macrostomy in snakes. Royal Society Open Science, 3, 1-10. </p>
+<p style="font-size:18px">4) Strong, C., Simoes, T., Caldwell, M, and Doschak, M. (2019). Cranial ontogeny of Thamnophis radix (Serpentes: Colubroidea) with a re-evaluation of current paradigms of snake skull evolution. Royal Society of Open Science, 6, 1-18.</p>
    
 </body>
 </html> 
