--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@ body {font-family: Arial;}
  <p style="font-size:20px">Macrostomy requires modifications in skeletal and soft tissue organs to permit snakes to consume the whole body of prey with high cross-sectional areas(3).  The ability to ingest large prey is acquired progressively through the course of postnatal ontogeny as these modifications are made. Snakes must undergo various changes in cranial structures throughout development to maximize their gape at their various body sizes (4). Therefore, it is important to study these cranial changes in Natricinae through ontogeny to understand how they contribute to the ability to exhibit macrostomy. </p>
   <p style="font-size:20px"> The interactive diagram below depicts a dorsal view of a plains garter snake (T. Radix) skull as an embryo, juvenile and adult to show important osteological changes that occur through cranial ontogeny. Click through each tab to see a visual of the changes that occur. Click on the labelled cranial bones for individual descriptions of how the skull transforms across ontogeny. This data was obtained from research performed by Strong, et. al. (2019) using fully-segmented micro-computed scans to produce the images of the skull of an emybryo, junior, and adult T. Radix. </p>
   
+   <p style="font-size:25px"><b> Key Concepts:</b><p> 
+  <p style="font-size:20px">Allometry: the growth of body parts at different rates</p>
+  <p style="font-size:20px">Negative Allometry: a body part has a slower growth rate than the rest of the body. For example, the head grows at a slower rate, which explains why juveniles have relatively large heads compared to adults. </p>
+  <p style="font-size:20px">Positive Allometry. a body part has a faster growth rate compared to the rest of the body.
+  <p style="font-size:20px">Ontogeny: refers to development from fertilization to adulthood. </p>
+  
   
 <div class="tab">
   <button class="tablinks" onclick="openCity(event, 'Embryo')" id="defaultOpen">Embryo</button>
