--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ body {font-family: Arial;}
   
 
 
-  <img src="/images/Adult.png" usemap="#adultmap" alt="Workplace" width="461" height="225">
+  <img src="/images/Adult1.png" usemap="#adultmap" alt="Workplace" width="461" height="225">
 
 <map name="#adultmap">
   <area shape="rect" coords="10, 147, 29, 164" onclick="myFunctionAdul(1)">
