--- a/index.html
+++ b/index.html
@@ -163,26 +163,29 @@ body {font-family: Arial;}
   <img src="/images/Adult1.png" usemap="#adultmap" alt="Workplace" width="610" height="291">
 
 <map name="#adultmap">
-  <area shape="rect" coords="10, 147, 29, 164" onclick="myFunctionAdul(1)">
-  <area shape="rect" coords="8, 73, 37, 129" onclick="myFunctionAdul(1)">
-   <area shape="rect" coords="109, 179, 122, 197" onclick="myFunctionAdul(2)">
-     <area shape="rect" coords="69, 52, 130, 141" onclick="myFunctionAdul(2)">
-   <area shape="rect" coords="135, 193, 163, 205" onclick="myFunctionAdul(3)">
-  <area shape="rect" coords="156, 169, 135, 169" onclick="myFunctionAdul(3)">
-   <area shape="rect" coords="210, 188, 231, 208" onclick="myFunctionAdul(4)">
-  <area shape="rect" coords="152, 31, 285, 168" onclick="myFunctionAdul(4)">
-  <area shape="rect" coords="353, 192, 372, 211" onclick="myFunctionAdul(5)">
-  <area shape="rect" coords="275, 153, 378, 159" onclick="myFunctionAdul(5)">
-  <area shape="rect" coords="302, 152, 382, 156" onclick="myFunctionAdul(5)">
-   <area shape="rect" coords="384, 197, 398, 209" onclick="myFunctionAdul(6)">
-  <area shape="rect" coords="355, 162, 395, 182" onclick="myFunctionAdul(6)">
-   <area shape="rect" coords="415, 192, 439, 210" onclick="myFunctionAdul(7)">
-  <area shape="rect" coords="404, 159, 433, 178" onclick="myFunctionAdul(7)">
-   <area shape="rect" coords="420, 128, 438, 121" onclick="myFunctionAdul(8)">
-  <area shape="rect" coords="380, 133, 417, 156" onclick="myFunctionAdul(8)">
-  <area shape="rect" coords="422, 131, 436, 138" onclick="myFunctionAdul(8)">
-  <area shape="rect" coords="394, 100, 414, 121" onclick="myFunctionAdul(9)">
-  <area shape="rect" coords="352, 103, 369, 133" onclick="myFunctionAdul(9)">
+  <area shape="rect" coords="35, 191, 53, 209" onclick="myFunctionAdul(1)">
+  <area shape="rect" coords="28, 87, 69, 164" onclick="myFunctionAdul(1)">
+   <area shape="rect" coords="162, 232, 178, 252" onclick="myFunctionAdul(2)">
+     <area shape="rect" coords="103, 65, 196, 191" onclick="myFunctionAdul(2)">
+   <area shape="rect" coords="193, 236 230, 265" onclick="myFunctionAdul(3)">
+  <area shape="rect" coords="169, 191, 228, 215" onclick="myFunctionAdul(3)">
+   <area shape="rect" coords="301, 245, 320, 265" onclick="myFunctionAdul(4)">
+  <area shape="rect" coords="207, 41, 368, 214" onclick="myFunctionAdul(4)">
+   <area shape="rect" coords="360, 58, 408, 183" onclick="myFunctionAdul(4)">
+  <area shape="rect" coords="484, 243, 506, 269" onclick="myFunctionAdul(5)">
+  <area shape="rect" coords="380, 191, 457, 215" onclick="myFunctionAdul(5)">
+  <area shape="rect" coords="457, 189, 535, 200" onclick="myFunctionAdul(5)">
+   <area shape="rect" coords="523, 247, 545, 277" onclick="myFunctionAdul(6)">
+  <area shape="rect" coords="465, 207, 541, 237" onclick="myFunctionAdul(6)">
+   <area shape="rect" coords="563, 243, 596, 263" onclick="myFunctionAdul(7)">
+  <area shape="rect" coords="552, 207, 566, 225" onclick="myFunctionAdul(7)">
+   <area shape="rect" coords="569, 208, 592, 213" onclick="myFunctionAdul(7)">
+   <area shape="rect" coords="571, 165, 597, 181" onclick="myFunctionAdul(8)">
+  <area shape="rect" coords="505, 171, 539, 182" onclick="myFunctionAdul(8)">
+  <area shape="rect" coords="554, 183, 573, 200" onclick="myFunctionAdul(8)">
+  <area shape="rect" coords="544, 132, 563, 156" onclick="myFunctionAdul(9)">
+  <area shape="rect" coords="486, 128, 520, 163" onclick="myFunctionAdul(9)">
+  <area shape="rect" coords="475, 168, 497, 183" onclick="myFunctionAdul(9)">
 </map>
   
  <div class="adul">
