--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@ body {font-family: Arial;}
   <h3>Embryonic Stage</h3>
   
   <p>Skull Length: 9.7mm</p>
+  <p>n, nasal; f, frontal; mx, maxilla; p, parietal; st, supratemporal; q, quadrate; co, compound bone; pt, pterygoid; ot, otoccipital</p>
   
   <img src="/images/Embryo1.png" alt="Workplace" usemap="#embryomap" width="610" height="325">
   
@@ -112,6 +113,7 @@ body {font-family: Arial;}
 <div id="Juvenile" class="tabcontent">
   <h3>Juvenile Stage</h3>
   <p>Skull Length: 11.6 mm </p> 
+   <p>n, nasal; f, frontal; mx, maxilla; p, parietal; st, supratemporal; q, quadrate; co, compound bone; pt, pterygoid; ot, otoccipital</p>
   
 
 
@@ -157,6 +159,7 @@ body {font-family: Arial;}
 <div id="Adult" class="tabcontent">
   <h3>Adult Stage</h3>
   <p>Skull Length: 17.1 mm</p>
+   <p>n, nasal; f, frontal; mx, maxilla; p, parietal; st, supratemporal; q, quadrate; co, compound bone; pt, pterygoid; ot, otoccipital</p>
   
 
 
