--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@ document.getElementById("defaultOpen").click();
 
 
 
-<p style="font-size:25px"><b>Reference:</b></p>
+<p style="font-size:25px"><b>References:</b></p>
 <p style="font-size:18px">1) Hampton, P. (2014). Allometry of skull morphology, gape size, and ingestion performance in the banded watersnake (Nerodia fasciata) feeding on two types of prey. </p>
 <p style="font-size:18px">2) Hampton, P., and Moon, B. (2012). Gape size, its morphological basis, and the validity of gape indices in western diamond-backed rattlesnakes (crotalus atrox). Journal of Morphology, 274, 194-202. </p>
 <p style="font-size:18px">3) Scanferla, A. (2016). Postnatal ontogeny and the evolution of macrostomy in snakes. Royal Society Open Science, 3, 1-10. </p>
