--- a/index.html
+++ b/index.html
@@ -58,6 +58,12 @@ body {font-family: Arial;}
   <p style="font-size:20px">Negative Allometry: a body part has a slower growth rate than the rest of the body. For example, the head grows at a slower rate, which explains why juveniles have relatively large heads compared to adults. </p>
   <p style="font-size:20px">Positive Allometry. a body part has a faster growth rate compared to the rest of the body.
   <p style="font-size:20px">Ontogeny: refers to development from fertilization to adulthood. </p>
+  <p style="font-size:20px">Ossification: process of bone formation. </p>
+  <p style="font-size:20px">Fontanelle: space between bones of the skull.</p>
+  <p style="font-size:20px">Lamina: layer of tissue. </p>
+    <p style="font-size:20px">Posterior: tail end. <p>
+  <p style="font-size:20px">Ventral: front, belly.</p>
+  <p style="font-size:20px">Dorsal: back, spinal column. </p>
   
   
 <div class="tab">
