--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ body {font-family: Arial;}
     <p style="font-size:20px">Posterior: tail end. <p>
   <p style="font-size:20px">Ventral: front, belly.</p>
   <p style="font-size:20px">Dorsal: back, spinal column. </p>
-   <p style="font-size:20px">lateral aperture of the recessus scalae tympani (LARST): opening of lateral extremities of tympainic duct (cavity in the inner ear)
+   <p style="font-size:20px">lateral aperture of the recessus scalae tympani (LARST): opening of lateral extremities of tympanic duct (cavity in the inner ear)
   
 <div class="tab">
   <button class="tablinks" onclick="openCity(event, 'Embryo')" id="defaultOpen">Embryo</button>
