--- a/index.html
+++ b/index.html
@@ -62,10 +62,16 @@ body {font-family: Arial;}
   <p style="font-size:20px">Fontanelle: space between bones of the skull.</p>
   <p style="font-size:20px">Lamina: layer of tissue. </p>
     <p style="font-size:20px">Posterior: tail end. <p>
+  <p style="font-size:20px">Anterior: front end. </p>
   <p style="font-size:20px">Ventral: front, belly.</p>
   <p style="font-size:20px">Dorsal: back, spinal column. </p>
-   <p style="font-size:20px">lateral aperture of the recessus scalae tympani (LARST): opening of lateral extremities of tympanic duct (cavity in the inner ear)
+   <p style="font-size:20px">lateral aperture of the recessus scalae tympani (LARST): opening of lateral extremities of tympanic duct (cavity in the inner ear). </p>
+  <p style="font-size:20px">Crista: ridge or crest.</p>
+    <p style="font-size:20px">Condyle: a protuberence (extension) at the end of a bone</p>
+  <p style="font-size:20px">Jugular Foramen: opening in the base of the skull </p>
+  <p style="font-size:20px">Occiput: back of the skull. </p>   
   
+     
 <div class="tab">
   <button class="tablinks" onclick="openCity(event, 'Embryo')" id="defaultOpen">Embryo</button>
   <button class="tablinks" onclick="openCity(event, 'Juvenile')">Juvenile</button>
@@ -216,7 +222,7 @@ body {font-family: Arial;}
 
 <script>
   let EmbryoList = ["Nasal", "Frontal", "Maxilla", "Parietal", "Supratemporal", "Quadrate", "Compound Bone", "Pterygoid", "Otoccipital"];
-  let EmbryoListText = ["The dorsal laminae of the nasal is only a weakly ossified surface, so it lacks a solid bone structure.", "The frontal exhibits no contact with the parietals and the posterior third is unsutured, so it is not held together by tissue.", "There is minimal contact between premaxilla (a pair of small bones at the tip of the upper jaw) and rest of the snout.", "The central parietal roof is unossified. There is a space between the parietal and supraoccipital (yellow bone).", "The posterior terminus is downcurved and anterior to occiput (back of the skull).", "The quadrate is anterior to occipital condyle and is slightly off-vertical.", "The compound bone terminates slightly posteroventral to occipital condyle, which is the attachment point between the skull and vetrebral column. The mandibular condyle is anterior to occipital condyle.", "The posterior terminus is below the occipital condyle so it is not visible in the dorsal view.", "The jugular foramen, an opening in the base of the skull, is small and internally undivided. The crista tuberalis is unfused ventrally to crista interfenestralis. The LARST opens laterally."];
+  let EmbryoListText = ["The dorsal laminae of the nasal is only a weakly ossified surface, so it lacks a solid bone structure.", "The frontal exhibits no contact with the parietals and the posterior third is unsutured, so it is not held together by tissue.", "There is minimal contact between premaxilla (a pair of small bones at the tip of the upper jaw) and rest of the snout.", "The central parietal roof is unossified. There is a space between the parietal and supraoccipital (yellow bone).", "The posterior terminus is downcurved and anterior to occiput.", "The quadrate is anterior to occipital condyle and is slightly off-vertical.", "The compound bone terminates slightly posteroventral to occipital condyle. The mandibular condyle is anterior to occipital condyle.", "The posterior terminus is below the occipital condyle so it is not visible in the dorsal view.", "The jugular foramen  is small and internally undivided. The crista tuberalis is unfused ventrally to crista interfenestralis. The LARST opens laterally."];
   
   
  function myFunctionEmb(variable) {
